--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
     <h1>Area Personal</h1>
-    <h4>Aquí puedes realizar diferentes acciones</h4>
+    <h5>No me ha dado tiempo  ataemrinar el area personal, pero el login funciona</h5>
     <br>
     <div>
       <button (click)="verPerfil()">Ver Perfil</button> &nbsp;
